syntax = "proto3";

package hello;

import "greeter.proto";

service Auth {
  rpc Login (LoginRequest) returns (LoginReply);
  rpc SaySecretGreeting (HelloRequest) returns (HelloReply);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
}
